--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Homework 10</title>
   </head>
   <body>
-    <input type="text" id="search-box" />
+    <input type="text" id="search-box" placeholder="Ukraine" />
     <ul class="country-list"></ul>
     <div class="country-info"></div>
 
